--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                 <div class="contact-box">
                     <strong>Have Questions?</strong>
                     <p style="margin-top: 5px; margin-bottom: 0;">If you have any questions regarding your data or these terms, please contact us at:</p>
-                    <a href="mailto:support@cosplayai.com" style="color: var(--primary); font-weight: bold; text-decoration: none;">support@cosplayai.com</a>
+                    <a href="mailto:orion.extensions@gmail.com" style="color: var(--primary); font-weight: bold; text-decoration: none;">orion.extensions@gmail.com</a>
                 </div>
 
             </div>
