--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <p>We collect the following types of information to provide our services:</p>
                     <ul>
                         <li><strong>Account Information:</strong> When you sign up via Google or Email, we collect your email address and a unique user identifier (UID) to secure your account and manage your credit balance.</li>
-                        <li><strong>User Content (Images):</strong> We collect the images you generate for your My Creations collections. These images are not used for any other purpose.</li>
+                        <li><strong>User Content (Images):</strong> We store the images you generate for your My Creations collections. These images are not used for any other purpose.</li>
                         <li><strong>Usage Data:</strong> We may collect anonymous data regarding feature usage (e.g., which styles are most popular) to improve the app experience.</li>
                     </ul>
 
